feat: Block report retrieving if upload has not ended (#68)
* feat: Block report retrieving if upload has not ended

* feat: Change Too_Early error description

* feat: Add error Too_Early to openapi v2
