# src/main/java/it/gov/pagopa/gpd/upload/controller/external/v2/CheckUploadController.java
@@ -91,6 +91,7 @@ public class CheckUploadController {
             @ApiResponse(responseCode = "401", description = "Wrong or missing function key.", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = ProblemJson.class))),
             @ApiResponse(responseCode = "403", description = "Forbidden", content = @Content(schema = @Schema())),
             @ApiResponse(responseCode = "404", description = "Upload report not found.", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = ProblemJson.class))),
+            @ApiResponse(responseCode = "425", description = "The report has not been generated yet, wait for the operations to complete.", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = ProblemJson.class))),
             @ApiResponse(responseCode = "429", description = "Too many requests.", content = @Content(mediaType = MediaType.TEXT_JSON)),
             @ApiResponse(responseCode = "500", description = "Service unavailable.", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = ProblemJson.class)))})
     @Get(value = BASE_PATH + "file/{file-id}/report",
@@ -113,6 +114,10 @@ public class CheckUploadController {
             }
             if (uploadReport == null)
                 throw e;
+        }
+
+        if(uploadReport != null && uploadReport.getEndTime() == null){
+            throw new AppException(HttpStatus.TOO_EARLY, "Too Early", "The report has not been generated yet, wait for the operations to complete.");
         }
 
         return HttpResponse.status(HttpStatus.OK)
